# DIT632-Group23

./: .gitignore  CMakeLists.txt  README.md
WB0/: main.c
WB1/: Exercise_3.c
WB2/: Exercise_1.c
WP1/: CMakeLists.txt
WP1/Exercise2/: e2.c
WP1/Exercise_1/: e1.c
WP1/Exercise_2/: e2.c
WP1/Exercise_3/: Exercise_3.c
WP1/Exercise_4/: Exercise_4.c  Exercise_4_d.c  Exercise_4_p2.c
WP1/Exercise_5/: Exercise_5.c
WP2/Exercise_1/: robot.c
WP2/Exercise_2/: Exercise_2.c
WP2/Exercise_3/: Exercise_3  Exercise_3.c
WP2/Exercise_4/: code.c  decode.c
WP3/Exercise_1_SET-UP/: WP3_E1_SET-UP(Version 1).ino  WP3_E1_SET-UP(Version 2).ino
WP3/Exercise_2_TEMPERATURE AND LIGHT METER/: WP3_E2__TEMPERATURE AND LIGHT METER.c
WP3/Exercise_3_KEYBOARD SCANNING(without keypad.h)/: WP3_E3_KEYBOARD SCANNING(without keypad.h).c
WP3/Exercise_3_TEMPERATURE METER V 2.0/: WP3_E3_TEMPERATURE METER V 2.0.ino
WP3/Exercise_4_KEYBOARD SCANNING(with keypad.h)/: WP3_E4_KEYBOARD SCANNING(with keypad.h).c
WP4/Exercise1/: WP4_E1.c
WP4/Exercise2/: WP4-E2.c
WP4/Exercise3/: WP4_E3.ino
WP6/WP6_E1/: WP6_Ex1.ino
WP6/WP6_E2/: WP6_E2.c  WP6_E2.ino
