cmake_minimum_required(VERSION 3.21)
project(WP1 C)

set(CMAKE_C_STANDARD 99)

add_executable(WP1-ex1 WP1/Exercise_1/e1.c)
add_executable(WP1-ex2 WP1/Exercise_2/e2.c)
add_executable(WP1-ex3 WP1/Exercise_3/Exercise_3.c)
add_executable(WP1-ex4_dec2bin WP1/Exercise_4/Exercise_4.c)
add_executable(WP1-ex4_bin2hex WP1/Exercise_4/Exercise_4_p2.c)